2003-04-24  Dimitrie O. Paun <dpaun@rogers.com>

        * doc/binutils.texi: Fix the documentation for the -fo option.

2003-04-23  J"orn Rennecke <joern.rennecke@superh.com>

	* readelf.c (get_machine_name) <EM_SH>: Amend return value
	to refer to SuperH.

	* readelf.c (decode_location_expression): Don't add a trailing ';'.

2003-04-23  Dimitrie O. Paun <dpaun@rogers.com>
            Nick Clifton  <nickc@redhat.com>

	* windres.c (long_options): Move close to main, where it is used.
	Add 'input' and 'output' long options.
	(main): Accept "-fo" as an alias for "-o".  This is for rc
	comptibility.
	* doc/binutils.texi: Mention that -fo is accepted as an alias for
	-o, but discourage its use.

2003-04-22  Dimitrie O. Paun  <dpaun@rogers.com>

	* windres.c (format_from_name): Make the exit on error
	behaviour optional.
	(main): Rename the -I option to -J. Introduce -I as a synonym
	for --include-dir.  For backwards compatibility also support the
	old -I behaviour, but issue a deprecation warning.
	* doc/binutils.texi: Rename -I to -J.  Document the new behaviour
	of the -I option.

2003-04-22  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* readelf.c: Replace references to Mitsubishi M32R with
	references to Renesas M32R.

2003-04-15  Rohit Kumar Srivastava <rohits@kpitcummins.com>

	* readelf.c: Replace occurrances of 'Hitachi' with 'Renesas'.

2003-04-09  Alexandre Oliva  <aoliva@redhat.com>

	* doc/binutils.texi (objdump) [--debugging]: Suggest readelf -w
	for debugging information types not supported by objdump.

2003-04-09  Bernd Jendrissek <berndj@prism.co.za>

	* configure.in: Recognize canonical form of i[3-6]86-pe*.
	* configure: Regenerate.

2003-04-09  Alexandre Oliva  <aoliva@redhat.com>

	* readelf.c (display_debug_info): Apply RELA relocations on the
	entire section.
	(byte_put_little_endian, byte_put_big_endian): New functions.
	(byte_put): New variable.
	(get_file_header): Initialize it.

2003-04-05  Dimitrie O. Paun <dpaun@rogers.com>
